# $Id$

Griffith ChangeLog
------------------
(c) 2005-2006 Vasco Nunes

2006-05-08 Piotr Ozarowski <ozarow@gmail.com>
	* Cinematografo movie plugin updated.

2006-05-02 Piotr Ozarowski <ozarow@gmail.com>
	* Added MySQL support
	* Server can be changed on the fly (see database tab in preferences)
	* Some GtkComboBoxEntry widgets changed to GtkComboBox

2006-04-28 Piotr Ozarowski <ozarow@gmail.com>
	* SQLAlchemy transition started

2006-04-26 Piotr Ozarowski <ozarow@gmail.com>
	* Added database settings to preferences window

2006-04-25 Piotr Ozarowski <ozarow@gmail.com>
	* Added PostgreSQL support!
	* Added merging data from .gri and .db files (still needs work)
	* Fixed some minor bugs

2006-04-25 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Added italian translation (thanks to Diego Porcelli)

2006-04-23 Piotr Ozarowski <ozarow@gmail.com>
	* SQLite2 database automatic conversion added
	* ADOdb transition completed

2006-04-22 Piotr Ozarowski <ozarow@gmail.com>
	* Backup/restore function rewritten (smaller zipfile)
	* Merge database function added (rewritten coffelius's patch)

2006-04-21 Piotr Ozarowski <ozarow@gmail.com>
	* Adding another numeric tag/lang/volume/collection is now not possible

2006-04-20 Piotr Ozarowski <ozarow@gmail.com>
	* ADOdb transition started

2006-04-17 Piotr Ozarowski <ozarow@gmail.com>
	* Version changed to 0.6.1+svn
	* Minor fixes in doc files
	* Added watch file for Debian package

---- 0.6.1 ---

2006-04-14 Piotr Ozarowski <ozarow@gmail.com>
	* Updated some docs (translation README and INSTALL notes)
	* Fixed some typos
	* Polish translation updated

2006-04-11 Piotr Ozarowski <ozarow@gmail.com>
	* Filter function rewritten
	  + new fields added
	  + it should work on Windows now

2006-04-08 Piotr Ozarowski <ozarow@gmail.com>
	* First tag can now be renamed

2006-04-08 Vasco Nunes <vasco.m.nunes@gmail.com>
	* win32 distro is using now gtk2.8 with pygtk2.8. This fixes lots of old pygtk related bugs (mainly major pixbuf ones)
