@@ -20,3 +20,6 @@ Pierre-Luc Levy
 
 Blonk <blondak@neser.cz>
 * CSFD movie plugin
+
+Michael Jahn <mikej06@hotmail.com>
+* Kino.de movie plugin
